--- a/app/views/royalties/ips/statements/show.html.erb
+++ b/app/views/royalties/ips/statements/show.html.erb
@@ -37,29 +37,40 @@ end
 
     <h4 class="text-secondary mt-3">Pragmatic Programmers LLC</h4>
     <h5 class="text-secondary">Client Statement</h5>
-    <h5 class="mb-4"><span><span class="text-secondary">Month ending: </span><%= @statement.month_ending.strftime("%B %d %Y") %></h5>
+    <table class="table table-sm">
+      <tbody>
+        <tr>
+          <th class="text-secondary ps-0">Month ending:</th>
+          <td><%= @statement.month_ending.strftime("%B %d %Y") %></td>
+        </tr>
+        <tr>
+          <th class="text-secondary ps-0">Uploaded:</th>
+          <td><%= @statement.created_at&.strftime("%B %d %Y") %></td>
+        </tr>
+        <tr>
+          <th class="text-secondary ps-0">Imported:</th>
+          <td><%= @statement.imported_at&.strftime("%B %d %Y") %></td>
+        </tr>
+      </tbody>
+    </table>
+  <%= link_to "Back to statements", royalties_ips_statements_path, class: "text-secondary mb-3" %>
 
-    <%= render partial: "maybe_show_import_button", locals: { statement: @statement } %>
+  <%= render partial: "maybe_show_import_button", locals: { statement: @statement } %>
  </div>
 
-  <div class="bg-secondary bg-gradient text-center align-self-center p-5">
-    <%= bootstrap_form_with(model: @upload_files, url: upload_revenue_lines_royalties_ips_statement_path(@statement)) do |form| %>
-      <div class="my-auto h-100">
-        <h4>Upload Details Sheets</h4>
+ <div class="bg-secondary bg-gradient text-center align-self-center p-5">
+   <%= render(partial: "/shared/upload_form", locals: {
+     model: @upload_files,
+     url: upload_revenue_lines_royalties_ips_statement_path(@statement),
+     title: "Upload Spreadsheets for Details",
+     text: "Drop or select the individual details spreadsheet(s) here",
+     file_label: "&nbsp;".html_safe,
+     multiple: true,
+     accept: ".xlsx, .xls, .xlsm",
+     submit_label: "Upload sheet(s)"
+   })
+   %>
 
-
-        <div class="text-primary">Drop IPS spreadsheets here</div>
-        <div class="text-primary" style="--bs-text-opacity: .5;">(one or more at a time)</div>
-
-        <div>
-          <%= form.file_field :files, label: "&nbsp;".html_safe, multiple: true, accept: ".xlsx" %>
-        </div>
-
-        <div>
-          <%= form.submit("Upload file(s)", class: "mt-3 btn btn-primary") %>
-        </div>
-      <% end %>
-      </div>
   </div>
 </div>
 <%= render partial: "shared/oho_errors_list", locals: { object: @statement, errors: OhoError.for_object(@statement) } %>
