--- a/app/views/royalties/lp/statements/index.html.erb
+++ b/app/views/royalties/lp/statements/index.html.erb
@@ -3,14 +3,20 @@
 
 <div class="mt-5 mb-3 d-flex align-items-start justify-content-between gap-5 border-bottom border-secondary">
 
-<h1 class="h2 mt-5 mb-3">Learning Platform Royalties</h1>
+  <h1 class="h2 mt-5 mb-3">Learning Platform Royalties</h1>
 
-<div class="align-right py-3 px-5 mb-5 bg-secondary bg-gradient ">
-  <%=  bootstrap_form_with(model: @upload_wrapper, url: royalties_lp_statements_path()) do |f| %>
-    <%= f.file_field :file, multiple: false, accept: ".xlsx,.xlsm", label: "(upload Excel from ORM)" %>
-    <%= f.submit "Upload new statement", class: "btn btn-primary mt-1 mb-4" %>
-  <% end %>
-</div>
+  <div class="align-right py-3 px-5 mb-5 bg-secondary bg-gradient ">
+    <%= render partial: "/shared/upload_form", locals: {
+      model: @upload_wrapper,
+      url: royalties_lp_statements_path(),
+      title: "Learning Platform Statement Upload",
+      text: "Drop or select the LP statement spreadsheet here",
+      file_label: "&nbsp;".html_safe,
+      multiple: false,
+      accept: ".xlsm",
+      submit_label: "Upload statement"
+    } %>
+  </div>
 </div>
 
 <%= turbo_stream_from "@statements" %>
