--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container mt-5">
   <div class="d-flex align-items-center">
-  <%= image_tag("oho-navbar.png") %>
+  <%= vite_image_tag("images/oho-navbar.png") %>
 
   <div>
   <h4>Future Home of an</h4>
