--- a/app/views/shared/_upload_form.html.erb
+++ b/app/views/shared/_upload_form.html.erb
@@ -3,8 +3,7 @@
   url: url,
   data: {controller: "file-upload"}) do |form| %>
   <div class="my-auto h-100">
-    <h4><%= title %>`</h4>
-
+    <h4><%= title %></h4>
 
     <div class="text-primary"><%= text %></div>
 
