--- a/app/assets/stylesheets/oho.css
+++ b/app/assets/stylesheets/oho.css
@@ -1,3 +1,7 @@
+* {
+  transition: background-color 0.2s ease-in-out;
+}
+
 .navbar-brand img {
     max-height: 96px;
 }
@@ -7,7 +11,7 @@
     cursor: help;
 }
 
-// author calendar items
+/* author calendar items */
 
 .aci-historic .card {
     background: #422;
