--- a/app/views/royalties/ips/statements/show.html.erb
+++ b/app/views/royalties/ips/statements/show.html.erb
@@ -53,9 +53,10 @@ end
         </tr>
       </tbody>
     </table>
-  <%= link_to "Back to statements", royalties_ips_statements_path, class: "text-secondary mb-3" %>
 
   <%= render partial: "maybe_show_import_button", locals: { statement: @statement } %>
+
+  <%= link_to "Back to statements", royalties_ips_statements_path, class: "text-secondary my-3" %>
  </div>
 
  <div class="bg-secondary bg-gradient text-center align-self-center p-5">
