get charts working

--- a/app/views/creators/sales/chart.html.erb
+++ b/app/views/creators/sales/chart.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "chart-modal" do %>
-  <div class="chart-modal card">
+  <div class="chart-modal card text-bg-light">
     <div class="card-header d-flex justify-content-between w-100 mb-4">
       <div>Sales Summary</div>
       <div>
