change color sc heme

--- a/app/views/creators/build_statuses/_log.html.erb
+++ b/app/views/creators/build_statuses/_log.html.erb
@@ -1,4 +1,4 @@
-<pre class="bg-black p-3">
+<pre class="bg-primary text-light p-3" style="background-color: #24273a !important"> <!-- catppuccin machiato -->
    <%= decode_ansii_sequences(@log_text) %>
 </pre>
 
