display estimated royalties on index

--- a/app/views/royalties/ips/statements/index.html.erb
+++ b/app/views/royalties/ips/statements/index.html.erb
@@ -30,6 +30,7 @@
       <th> Imported </th>
       <th> Status </th>
       <th> STMT Total </th>
+      <th class="text-end pe-3">Royalty (±)</th>
       <th> Uploaded file </th>
       <th></th>
     </tr>
