get payment reconciled with statemwnts

--- a/app/views/royalties/home/index.html.erb
+++ b/app/views/royalties/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= render "channel", channel_title: "Learning Platform", channel_path: royalties_lp_statements_path, channel_stats: @lp_stats %>
+  <%= render "channel", channel_title: "Learning Platform", channel_path: royalties_lp_statements_path,  channel_stats: @lp_stats %>
   <%= render "channel", channel_title: "Ingram Statements", channel_path: royalties_ips_statements_path, channel_stats: @ips_stats %>
-  <%= render "channel", channel_title: "Ingram Payments",   channel_path: royalties_ips_payments_path, channel_stats: @ips_stats %>
+  <%= render "channel", channel_title: "Ingram Payments",   channel_path: royalties_ips_payments_path,   channel_stats: @ips_payment_stats %>
 </div>
